--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,12 @@ android:
   components:
     - build-tools-23.0.0
     - android-23
-    
+
+before_script:
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a 
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  
 script:
-    - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a 
     - echo hola
