--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: android
+env:
+  matrix:
+    - ANDROID_TARGET=android-23 ANDROID_ABI=armeabi-v7a
 android:
   components:
     - build-tools-23.0.0
     - android-23
-    - android-google_apis/armeabi-v7a
+    - extra-android-m2repository
+    - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
+
 
 before_script:
   - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a 
