--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ android:
     - build-tools-23.0.0
     - android-23
     - sys-img-armeabi-v7a-android-23
+    - extra-android-m2repository
 
 
 before_script:
