--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ android:
   - extra-android-m2repository
 script:
 - echo hola
-- echo $EMAIL_NOTIFICATION
+- echo EMAIL_NOTIFICATION
 notifications:
   email:
     recipients:
+    - EMAIL_NOTIFICATION
     - maria@travis-ci.com
-    - "EMAIL_NOTIFICATION"
     on_success: always
     on_failure: always
 env:
