--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ android:
   - tools
   - build-tools-23.0.2
   - android-23
+  - android-24
   - sys-img-armeabi-v7a-android-23
   - extra-android-m2repository
 script:
