--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 language: android
 android:
   components:
-  - tools
+  - platform-tools
   - build-tools-23.0.2
   - build-tools-24.3.3
   - android-23
